drum kit base working, bug from orig program:  when button is he;d down and sound rapidly repeats, outline color-change get's stuck on

--- a/src/pages/Drumkit/style.css
+++ b/src/pages/Drumkit/style.css
@@ -7,7 +7,7 @@
   align-items: center;
 
   font-size: 10px;
-  background: url('../images/savannah-background.jpg') bottom center;
+  background: url('./images/savannah-background.jpg') bottom center;
   background-size: cover;
 
   margin: 0;
